@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2024 Australian Signals Directorate
+ * Copyright 2010-2025 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -91,7 +91,7 @@ public class GraphicsCardUtilities {
                     }
 
                     final long startTime = System.currentTimeMillis();
-                    Runtime.getRuntime().exec("dxdiag /64bit /t " + tmp);
+                    Runtime.getRuntime().exec(new String[]{"dxdiag", "/64bit", "/t", tmp});
                     while (!file.exists()) {
                         try {
                             LOCK.wait(1000);
